# pico-loud_talking_detector

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
00_doc/: pico-loud_talking_detector.pptx  pico-loud_talking_detector.xlsx  wiring.txt
01_script/: array2wave.py  sin2wave.py  split_wave.py  train_micro_speech_model_sin.ipynb  train_micro_speech_model_talking_20210529.ipynb  wave2array.py
01_script/data_gathering/: add_noise.py  create_noise.py  download_youtube.py  download_youtube_music.py  download_youtube_yoshimoto.py  record_10sec.py  separate_wav.py  split_wav.py  youtute_channel.py  yt2wav.py
01_script/training/: input_data.py  models_10sec.tgz  models_5sec.tgz  train_micro_speech_model_talking_20210529_2.ipynb  train_micro_speech_model_talking_20210531.ipynb
01_script/training/model_10sec/: model.tflite
pj_loud_talking_detector/: CMakeLists.txt  Oled.cpp  Oled.h  OledSh1106.cpp  OledSh1106.h  adc_buffer.cpp  adc_buffer.h  amplitude_analyzer.cpp  amplitude_analyzer.h  analyze_amplitude.cpp  analyze_amplitude.h  audio_buffer.h  audio_provider.cpp  audio_provider.h  main.cpp  majority_vote.h  oled.h  pdm_buffer.cpp  pdm_buffer.h  ring_block_buffer.h  test_buffer.cpp  test_buffer.h
pj_loud_talking_detector/micro_features/: micro_model_settings.cpp  micro_model_settings.h  model.cpp  model.h  model_10sec.cpp  model_5sec.cpp
